# Ecommerce-Fastapi

./: .flake8  .pre-commit-config.yaml  pyproject.toml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql
project_site/: main.py
project_site/auth/: Dependency.py
project_site/auth/queries/: auth_user.edgeql  auth_user_async_edgeql.py
project_site/auth/route/: authentication.py
project_site/auth/schemas/: User.py
project_site/auth/utils/: tokens.py
project_site/carts/: carts.py
project_site/carts/queries/: create_cart.edgeql  create_cart_async_edgeql.py  delete_cart.edgeql  delete_cart_async_edgeql.py  get_cart.edgeql  get_cart_async_edgeql.py  get_cart_by_id_and_user.edgeql  get_cart_by_id_and_user_async_edgeql.py  get_cart_by_id_async_edgeql.py  update_cart.edgeql  update_cart_async_edgeql.py
project_site/carts/route/: carts.py  views.py
project_site/carts/schemas/: Cart.py
project_site/product/: category.py  product_views.py  products.py  views.py
project_site/product/queries/: check_is_admin.edgeql  check_is_admin_async_edgeql.py  create_category.edgeql  create_category_async_edgeql.py  create_product.edgeql  create_product_async_edgeql.py  delete_category.edgeql  delete_category_async_edgeql.py  delete_product.edgeql  delete_product_async_edgeql.py  get_category.edgeql  get_category_async_edgeql.py  get_category_by_id.edgeql  get_category_by_id_async_edgeql.py  get_category_by_name.edgeql  get_product.edgeql  (+8 more)
project_site/queries/: get_user.edgeql  get_user_by_name.edgeql
project_site/schemas/: product_schema.py  user_schema.py
project_site/user/: user_views.py  users.py  views.py
project_site/utils/: response.py
(+15 files in other folders)
