[tool.poetry]
name = "project-site"
version = "0.1.0"
description = ""
authors = ["Laxman <laxman.kunwar@codavatar.tech>"]
readme = "README.md"
packages = [{include = "project_site"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
edgedb = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
