[tool.poetry]
name = "project-site"
version = "0.1.0"
description = ""
authors = ["Laxman <laxman.kunwar@codavatar.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
edgedb = "^1.5.0"
pydantic = {extras = ["email"], version = "^2.1.1"}
pre-commit = "^3.3.3"
black = "^23.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.0.2"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
